[package]
name = "dmon-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
cbc = "0.1.2"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
cron = "0.13.0"
ctrlc = "3.4.5"
futures = "0.3.31"
hex = "0.4.3"
run_script = "0.11.0"
serde_json = "1.0.133"
sha2 = "0.10.8"
sysinfo = "0.33.0"
ureq = "2.12.1"
yaml-rust = "0.4.5"
